--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.4.1
   provider: ^6.1.2
   shared_preferences: ^2.2.2
+  google_fonts: ^6.2.0
 
 dev_dependencies:
   flutter_test:
